--- a/Store coupon usage prediction.Rmd
+++ b/Store coupon usage prediction.Rmd
@@ -1,12 +1,5 @@
----
-title: "Introduction to Stats and Linear Modeling Assignment 5"
-output:
-  pdf_document: default
-  html_notebook: default
-  word_document: default
----
+Store coupon usage prediction.Rmd
 
-```{r error= FALSE}
 traindata=simmons[1:500,]
 testdata=simmons[501:1000,]
 head(traindata)
@@ -69,6 +62,7 @@ probs <- function(logit){
   prob <- odds / (1 + odds)
   return(prob)
 }
+
 #Gives the porbability value of the intercept and coefficient
 probs(coef(logist_2))
 
@@ -95,4 +89,3 @@ UsesCoupon
 #This will give the probability for UseCoupon for HasCard has 0 or 1
 probability= probs(UsesCoupon)
 probability
-```
